api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-api
  template:
    metadata:
      labels:
        app: data-api
    spec:
      containers:
        - name: api
          image: ghcr.io/sebinski/data-api:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: data-api
  namespace: default
spec:
  selector:
    app: data-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
